--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "rules": {}
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    "defaults"
   ],
   "engines": {
     "node": ">=14.16.0"
