--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
+    "dayjs": "^1.10.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -31,7 +29,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "eslintConfig": {
     "root": true,
